--- a/data-sources.html
+++ b/data-sources.html
@@ -1726,7 +1726,7 @@
             <script src="datasource.js"></script>
             <script>
               async function createDataSource(formData) {
-                const url = 'http://localhost:4000/data-source/create-data-source'; // Replace this with the actual URL of your backend API endpoint
+                const url = 'https://api.coreoutline.com/data-source/create-data-source'; // Replace this with the actual URL of your backend API endpoint
                 const headers = {
                   'Content-Type': 'application/json'
                 };
@@ -2552,7 +2552,7 @@
                   data-bs-parent="#dataSourcesAccordion">
                   <div class="accordion-body">
                     <ol>
-                      <li>Log in to your <a href="https://dashboard.stripe.com/apikeys" target="_blank">Stripe
+                      <li>Log in to your <a href="https://dashboard.stripe.comhttps://api.coreoutline.comkeys" target="_blank">Stripe
                           Dashboard</a>.</li>
                       <li>Navigate to <b>Developers &gt; API keys</b>.</li>
                       <li>Copy your <b>Publishable key</b> and <b>Secret key</b> below.</li>
@@ -2756,7 +2756,7 @@
                         <input type="text" class="form-control" id="playstoreDataSourceName" placeholder="Enter your Data Source Name" required>
                     </div>
                     <ol>
-                      <li>Go to the <a href="https://console.cloud.google.com/apis/credentials" target="_blank">Google
+                      <li>Go to the <a href="https://console.cloud.google.comhttps://api.coreoutline.coms/credentials" target="_blank">Google
                           Cloud Console</a>.</li>
                       <li>Create a Service Account and download the JSON credentials file.</li>
                       <li>Upload the JSON file below.</li>
@@ -2827,7 +2827,7 @@
                   data-bs-parent="#dataSourcesAccordion">
                   <div class="accordion-body">
                     <ol>
-                      <li>Log in to your <a href="https://appstoreconnect.apple.com/access/api" target="_blank">App
+                      <li>Log in to your <a href="https://appstoreconnect.apple.com/accesshttps://api.coreoutline.com" target="_blank">App
                           Store Connect</a>.</li>
                       <li>Go to <b>Users and Access &gt; Keys</b> and create an API key.</li>
                       <li>Download the API key (.p8), and note your <b>Issuer ID</b> and <b>API Key ID</b>.</li>
@@ -2916,7 +2916,7 @@
                     </div>
                     <ol>
                       <li>Share your Google Sheet with a Service Account email.</li>
-                      <li>Go to the <a href="https://console.cloud.google.com/apis/credentials" target="_blank">Google
+                      <li>Go to the <a href="https://console.cloud.google.comhttps://api.coreoutline.coms/credentials" target="_blank">Google
                           Cloud Console</a> and create a Service Account.</li>
                       <li>Download the Service Account JSON file and upload it below, along with your Sheet URL.</li>
                     </ol>
@@ -2988,7 +2988,7 @@
                   data-bs-parent="#dataSourcesAccordion">
                   <div class="accordion-body">
                     <ol>
-                      <li>Go to <a href="https://api.slack.com/apps" target="_blank">Slack API: Your Apps</a> and create
+                      <li>Go to <a href="https:/https://api.coreoutline.com.slack.com/apps" target="_blank">Slack API: Your Apps</a> and create
                         a new app.</li>
                       <li>Assign the necessary permissions and install the app to your workspace.</li>
                       <li>Copy the Bot/User OAuth Token and enter it below.</li>
@@ -3354,7 +3354,7 @@
   <script src="../vendors/leaflet.tilelayer.colorfilter/leaflet-tilelayer-colorfilter.min.js"></script>
   <script src="../vendors/countup/countUp.umd.js"></script>
   <script src="../vendors/echarts/echarts.min.js"></script>
-  <script src="../assets/data/world.js"></script>
+  <script src="../assetshttps://data.coreoutline.com/world.js"></script>
   <script src="../vendors/dayjs/dayjs.min.js"></script>
   <script src="../assets/js/flatpickr.js"></script>
   <script src="../vendors/fontawesome/all.min.js"></script>
