Update logo assets and references, replace favicon, and adjust import paths.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="icon" href="/favicon.ico" type="image/png" />
     <title>Core&Outline | Analytics and Predictions</title>
     <meta property="og:title" content="Core&Outline | Analytics and Predictions" />
     <meta property="og:type" content="website" />
